spade-tests/src/snapshots/spade_tests__const_generics__type_expressions_in_generic_parameter_type_check_across_instanmces.snap
---
source: spade-tests/src/const_generics.rs
---
fn foo<#uint N>(value: uint<{N + 1}>) {}

fn bar() {
    let _ = foo::<3>(0u3);
    let _ = foo::<4>(0u4);
}


error: Expected type 3, got 4
  ┌─ testinput:1:30
  │
1 │ fn foo<#uint N>(value: uint<{N + 1}>) {}
  │                              ^^^^^ Expected 3, got 4
  │
  = note: Expected: 3
                in: 3
               Got: 4
                in: 4

error: Expected type 4, got 5
  ┌─ testinput:1:30
  │
1 │ fn foo<#uint N>(value: uint<{N + 1}>) {}
  │                              ^^^^^ Expected 4, got 5
  │
  = note: Expected: 4
                in: 4
               Got: 5
                in: 5
